--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "mongoose": "^8.4.3",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
